--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Microfluidics 101
+description: Concepts, applications, and accessible resources about Microfluidics in Life Science
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
